maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:8: error: ';' expected but ',' found.
def garM(c:Int):(Int) = {if (aMurD()) {if (aMurG()) {if (estFaceMur()) {demiTour();return c+2} else {avance();return c }} else {gauche(),avance();return c+1}} else {if (aMurG()) {if (estFaceMur()) {droite();avance();return c-1} else {avance();returnc }} else {gauche();return c+1}}}
                                                                                                                                        ^Escaper:59: error: ';' expected but '=' found.
    (c)=garM(c)
       ^